--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --primary: #ececec;
   --primary-light: rgb(249, 249, 249);
   --secound: #050505;
+  --secound-light: #6b6969;
   --secound-hover: #2c2b2b;
 }
 
